[package]
name = "cb_fut"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3"

[dev-dependencies]
futures = {version = "^0.3", features=["thread-pool"]}