[package]
name = "cb_fut"
description = "Call function that return value via callback without a callback"
version = "0.2.2"
authors = ["Nattapong Sirilappanich <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"
license = "BSD-3-Clause"
keywords = ["callback", "futures", "async", "conversion", "convert"]
repository = "https://github.com/NattapongSiri/cb_fut"
categories = ["asynchronous", "rust-patterns"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
crossbeam=["crossbeam-channel"]


[dependencies]
futures = "^0.3"
crossbeam-channel = { version="^0.4", optional = true}